<resources>
    <string name="app_name">Smartech SDK Sample</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wish_list">Wishlist</string>
    <string name="advanced">Advanced</string>
    <string name="all_fields_are_required">All fields are required.</string>
    <string name="checkout">Checkout</string>
    <string name="city">City</string>
    <string name="clear">Clear</string>
    <string name="clear_user_identity">Clear User Identity</string>
    <string name="copied">Copied.</string>
    <string name="default_user_location_set">Default user location set.</string>
    <string name="device_unique_id">Device Unique ID</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email_id">Enter email id.</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="fcm_token">FCM Token</string>
    <string name="first_name">First Name</string>
    <string name="guest_login">Guest Login</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="login_subtitle">Login to see more features of Smartech SDK</string>
    <string name="logout">Logout</string>
    <string name="not_available">Not Available</string>
    <string name="opt_in_apps">Opt In-Apps</string>
    <string name="opt_push_notifications">Opt Push Notifications</string>
    <string name="opt_tracking">Opt Tracking</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_login_first">Please login first.</string>
    <string name="profile_updated">Profile Updated.</string>
    <string name="register">Register</string>
    <string name="registration_successful">Registration Successful.</string>
    <string name="set_location">Set Location</string>
    <string name="set_update_user_identity">Set/Update User Identity</string>
    <string name="smartech_sdk_version">Smartech SDK v3.1.12</string>
    <string name="thank_you">Thank you.</string>
    <string name="tracking_add_to_cart">Tracking Add to Cart.</string>
    <string name="tracking_add_to_wish_list">Tracking Add to Wishlist.</string>
    <string name="tracking_checkout">Tracking Checkout.</string>
    <string name="tracking_events">Tracking Events</string>
    <string name="tracking_users">Tracking Users</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="user_identity_cleared">User Identity Cleared.</string>
    <string name="you_are_logged_out">You are logged out.</string>
</resources>