<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login_subtitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/til_identity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_login_subtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/img_netcore"
        app:layout_constraintBottom_toTopOf="@id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_update_identity"
        style="@style/RoundButtonStyle.Orange"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_identity" />

    <Button
        android:id="@+id/btn_guest_login"
        style="@style/RoundButtonStyle.Transparent"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/guest_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_identity" />

    <Button
        android:id="@+id/btn_register"
        style="@style/RoundButtonStyle.Transparent"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@id/btn_guest_login"
        app:layout_constraintTop_toBottomOf="@id/btn_update_identity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smartech_sdk_version"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>